--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "npm run docs:build && npm run docs:deploy",
     "release": "npm run build && npm publish",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
-    "postversion": "dumi assets",
+    "asset": "dumi assets",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
